# ABH

./: README.md
agents/buyer-simple-agent/: Dockerfile  pyproject.toml
agents/buyer-simple-agent/src/: agent_langgraph.py  langgraph_agent.py  strands_agent.py
agents/seller-simple-agent/: pyproject.toml
agents/seller-simple-agent/src/: agent.py  agent_langgraph.py  catalog.json  langgraph_agent.py  strands_agent.py  taskroute_core.py
workshops/a2a-payments/: presenter-notes.md
workshops/a2a-payments/python/: buyer.py  seller.py
workshops/getting-started/python/: client.py  server.py  server_manual.py
workshops/openclaw-docker/: README.md  docker-compose.yml  patch-handler.js
workshops/vibe-coding/: slides.html  slides.md
workshops/x402/: architecture.mmd  presenter-notes.md  slides.html  slides.md  two-schemes.mmd  x402-flow.mmd
workshops/x402/demo/: .env.example  pyproject.toml
workshops/x402/demo/src/: agent.py  client.py
